Fixed spacing issues

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -1471,7 +1471,7 @@ div .grey {
     .display-info-box {
         grid-column: span 1;
         height: 110px;
-        margin-left: 0;
+        margin: 0;
         font-size: 20px;
         margin-top: 10px !important;
         margin-right: 25px !important;
